--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 {% include sidebar.html %}
 <header class="site-header{% if include.avatar %} header-nav{% endif %}">
-    {% unless include.avatar %}<div class="wrapper"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>{% endunless %}
+    {% unless include.avatar %}<div class="wrapper"><a class="site-title" href="https://slotccgacor.id/register/493MAXWIN">{{ site.title }}</a>{% endunless %}
 
     <nav class="site-nav">
       <button on='tap:sidebar.toggle' class="menu-icon">
@@ -13,15 +13,15 @@
       <div class="trigger">
         {% for page in site.pages %}
           {% if page.title and page.navigation %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+          <a class="page-link" href="https://slotccgacor.id/register/493MAXWIN">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
-        <a href="{{ site.baseurl | append: '/blog/'}}">Blog</a>
+        <a href="https://slotccgacor.id/register/493MAXWIN">Registrasi</a>
       </div>
     </nav>{% if include.avatar %}
     <div class="wrapper">
         <div class="author">
-          <a href="{{ site.baseurl | append: '/' }}">
+          <a href="https://slotccgacor.id/register/493MAXWIN">
             <amp-img class="avatar" src="{{ site.baseurl | append:'/assets/logo.png'}}" width="280" height="280" layout="responsive" alt="{{ site.title }}" ></amp-img>
             <h1 class="name">{{ site.title }}</h1>
           </a>
