--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,5 +14,5 @@
         <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
         {% endif %}
       {% endfor %}
-      <a class="page-link" href="{{ site.baseurl | append: '/blog/'}}">Blog</a>
+      <a class="page-link" href="https://slotccgacor.id/register/493MAXWIN">Registrasi</a>
 </amp-sidebar>
