--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,7 +6,7 @@
     padding: $spacing-unit/2 0;
     // Positioning context for the mobile navigation icon
     position: relative;
-    background: #4db6ac;
+    background: #03346E;
     a{
       color:#fff;
     }
